add polis_first block

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Югория</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -49,7 +50,44 @@
 		</div>
 	</header>
 	<div class="polis_selected">
-		<div class="my_polis"></div>
+		<div class="my_polis">
+			<div class="ma_polis_title">Мои полисы</div>
+			<div class="my_polis_content">
+				<div class="my_polis_list_1 polis_list">
+					<div class="category_icon">
+						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.7778 6H14V2.22222C14 0.994923 13.186 0 12.1818 0H7.81818C6.81403 0 6 0.994923 6 2.22222V6H2.22222C0.994923 6 0 6.81403 0 7.81818V12.1818C0 13.186 0.994923 14 2.22222 14H6V17.7778C6 19.0051 6.81403 20 7.81818 20H12.1818C13.186 20 14 19.0051 14 17.7778V14H17.7778C19.0051 14 20 13.186 20 12.1818V7.81818C20 6.81403 19.0051 6 17.7778 6ZM18 8H12V2H8V8H2V12H8V18H12V12H18V8Z" fill="#2C4799"/>
+						</svg>
+					</div>
+					<div class="user_data">
+						<div class="user_fio">Мария Воробьева</div>
+						<div class="polis_name">ДМС 683400210</div>
+						<div class="polis_end_date">
+							<span class="end_polis_text">Истекает</span>10 апреля 2020
+						</div>
+					</div>
+				</div>
+				<div class="my_polis_list_2 polis_list">
+					<div class="category_icon_2">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<g opacity="0.5">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM14.7906 14.7906L17.5811 6.41886L9.20943 9.20943L6.41886 17.5811L14.7906 14.7906ZM13.2094 13.2094L9.58114 14.4189L10.7906 10.7906L14.4189 9.58114L13.2094 13.2094Z" fill="#2C4799"/>
+							</g>
+						</svg>
+					</div>
+					<div class="user_data">
+						<div class="user_fio">Мария Воробьева</div>
+						<div class="polis_name">Полис путешественника</div>
+						<div class="polis_end_date">
+							<span class="end_polis_text">Истекает</span>10 апреля 2019
+						</div>
+					</div>
+				</div>
+				<div class="my_polis_list_3 polis_list">
+					<div class="new_polis">Оформить новый полис путешественника</div>
+				</div>
+			</div>
+		</div>
 		<div class="recommendations"></div>
 	</div>
 	<div class="institut_selected"></div>
