add recommendations block

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 							<span class="end_polis_text">Истекает</span>10 апреля 2020
 						</div>
 					</div>
+					<div class="but">
+						<div class="but_about">Подробнее</div>
+					</div>
 				</div>
 				<div class="my_polis_list_2 polis_list">
 					<div class="category_icon_2">
@@ -82,13 +85,83 @@
 							<span class="end_polis_text">Истекает</span>10 апреля 2019
 						</div>
 					</div>
+					<div class="but">
+						<div class="but_extend">Продлить</div>
+						<div class="but_about">Подробнее</div>
+					</div>
 				</div>
 				<div class="my_polis_list_3 polis_list">
-					<div class="new_polis">Оформить новый полис путешественника</div>
+					<div class="new_polis">Оформить <br> новый полис <br> путешественника</div>
+					<div class="polis_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<g opacity="0.5">
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70706L12.7071 3.29285L21.4142 12L12.7071 20.7071L11.2929 19.2928L17.5858 13Z" fill="white"/>
+							</g>
+						</svg>
+
+					</div>	
 				</div>
 			</div>
 		</div>
-		<div class="recommendations"></div>
+		<div class="recommendations">
+			<div class="recommendations_title">Рекомендации</div>
+			<div class="recommendations_list">
+				<div class="recommendations_item">
+					<div class="rec_item_title"></div>
+					<div class="rec_item_info"></div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item">
+					<div class="rec_item_title"></div>
+					<div class="rec_item_info"></div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item">
+					<div class="rec_item_title"></div>
+					<div class="rec_item_info"></div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item">
+					<div class="rec_item_title"></div>
+					<div class="rec_item_info"></div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item">
+					<div class="rec_item_title"></div>
+					<div class="rec_item_info"></div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item">
+					<div class="rec_item_title"></div>
+					<div class="rec_item_info"></div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="institut_selected"></div>
 
