--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	
 </head>
 <body>
 	<header>
@@ -98,7 +99,6 @@
 								<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70706L12.7071 3.29285L21.4142 12L12.7071 20.7071L11.2929 19.2928L17.5858 13Z" fill="white"/>
 							</g>
 						</svg>
-
 					</div>	
 				</div>
 			</div>
@@ -106,9 +106,45 @@
 		<div class="recommendations">
 			<div class="recommendations_title">Рекомендации</div>
 			<div class="recommendations_list">
-				<div class="recommendations_item">
-					<div class="rec_item_title"></div>
-					<div class="rec_item_info"></div>
+				<div class="recommendations_item" style='background: url("images/bg_1.jpg");'>
+					<div class="rec_item_title">Лето – <br> время скидок</div>
+					<div class="rec_item_info">Скидки до 50% <br> на страхование с 1 июня <br> по 25 июля</div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item" style='background: url("images/bg_2.jpg");'>
+					<div class="rec_item_title">Путешествие <br> налегке</div>
+					<div class="rec_item_info">Скидки на полный <br> страховой пакет для <br> путешествий до 25%</div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item" style='background: url("images/bg_3.png");'>
+					<div class="rec_item_title">Поездки без <br> ограничений</div>
+					<div class="rec_item_info">Программа страхования <br>в путешествиях “мульти” <br> без ограничения <br> на количество поездок</div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>
+				<div class="recommendations_item" style='background: url("images/bg_4.png");'>
+					<div class="rec_item_title">Программа <br> ”бизнес”</div>
+					<div class="rec_item_info">Путешествуйте с одним <br> полисом в течение года <br> и не тратьте время <br> на переоформление</div>
+					<div class="rec_arrow">
+						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+						</svg>
+					</div>	
+				</div>				
+				<div class="recommendations_item" style='background: url("images/bg_5.png");'>
+					<div class="rec_item_title">Безопасность – <br> это не дорого</div>
+					<div class="rec_item_info">Программа страхования <br> “В” позволит экономно <br> путешествовать</div>
 					<div class="rec_arrow">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
@@ -116,48 +152,12 @@
 					</div>	
 				</div>
 				<div class="recommendations_item">
-					<div class="rec_item_title"></div>
-					<div class="rec_item_info"></div>
+					<div class="rec_item_info">Показать ещё <br> рекомендации</div>
 					<div class="rec_arrow">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M10.9999 17.5858L10.9999 3L12.9999 3L12.9999 17.5858L19.2928 11.2929L20.707 12.7071L11.9999 21.4142L3.29282 12.7071L4.70703 11.2929L10.9999 17.5858Z" fill="#2C4799"/>
 						</svg>
-					</div>	
-				</div>
-				<div class="recommendations_item">
-					<div class="rec_item_title"></div>
-					<div class="rec_item_info"></div>
-					<div class="rec_arrow">
-						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
-						</svg>
-					</div>	
-				</div>
-				<div class="recommendations_item">
-					<div class="rec_item_title"></div>
-					<div class="rec_item_info"></div>
-					<div class="rec_arrow">
-						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
-						</svg>
-					</div>	
-				</div>
-				<div class="recommendations_item">
-					<div class="rec_item_title"></div>
-					<div class="rec_item_info"></div>
-					<div class="rec_arrow">
-						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
-						</svg>
-					</div>	
-				</div>
-				<div class="recommendations_item">
-					<div class="rec_item_title"></div>
-					<div class="rec_item_info"></div>
-					<div class="rec_arrow">
-						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path fill-rule="evenodd" clip-rule="evenodd" d="M17.5858 13H3V11H17.5858L11.2929 4.70712L12.7071 3.29291L21.4142 12L12.7071 20.7071L11.2929 19.2929L17.5858 13Z" fill="#222222"/>
-						</svg>
+
 					</div>	
 				</div>
 			</div>
@@ -165,6 +165,29 @@
 	</div>
 	<div class="institut_selected"></div>
 
-	<footer></footer>
+	<footer>
+		<div class="footer_left">
+			<div>Обратная связь</div>
+			<div>Политика конфиденциальности</div>
+			<div class="footer_bot">© 1997–2018 АО «Государственная страховая компания «Югория»</div>
+		</div>
+		<div class="footer_right">
+			<div class="mail">
+				<div class="mail_title">Обратная связь</div>
+				<div class="mail_content">dms@ugsk.ru</div>
+			</div>
+			<div class="phones">
+				<div class="phones_name">
+					<div>Россия</div>
+					<div>Москва</div>
+				</div>
+				<div class="phones_numbers">
+					<div>8 800 100-82-00</div>
+					<div>8 495 970-10-70</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	
 </body>
 </html>
