--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="polis_selected disabled">
+	<div class="polis_selected">
 		<div class="my_polis">
 			<div class="my_polis_title">Мои полисы</div>
 			<div class="my_polis_content">
@@ -211,7 +211,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="institut_selected ">
+	<div class="institut_selected disabled">
 		<div class="institut_selected_content">
 			<div class="institut_head_radio">
 				<label class="institut_radio cli">
