--- a/index.html
+++ b/index.html
@@ -241,6 +241,73 @@
 				</label>
 			</div>
 		</div>
+		<div class="institut_list_content">
+			<div class="list_left">
+				<div>	
+					<div class="list_left_item">
+					<div class="clinick_title">Клиника МЕДСИ в Красногорске</div>
+					<div class="clinick_adress">Московская область, г. Красногорск, ул. Успенская, д. 5</div>
+					<div class="clinick_info">
+						<div class="clinick_info_time">
+							<div class="info_title">Время работы:</div>
+							<div class="info_content">Круглосуточно, <br> ежедневно</div>
+						</div>
+						<div class="clinick_info_phone">
+							<div class="info_title">Телефон</div>
+							<div class="info_content">+7 (495) 415-12-04 <br> +7 (495) 280-55-34</div>
+						</div>
+						<div class="clinick_info_site">
+							<div class="info_title">Сайт</div>
+							<div class="info_content"> <a href="#"> medsi.ru/clinics/uspen...</a></div>
+						</div>
+					</div>
+					<div class="clinick_about">Помощь на дому   ·   Стоматологическое обслуживание   ·   Скорая медицинская помощь   ·   Плановая и экстренная госпитализация</div>
+					</div>
+					<div class="list_left_item">
+					<div class="clinick_title">Клиника МЕДСИ в Красногорске</div>
+					<div class="clinick_adress">Московская область, г. Красногорск, ул. Успенская, д. 5</div>
+					<div class="clinick_info">
+						<div class="clinick_info_time">
+							<div class="info_title">Время работы:</div>
+							<div class="info_content">Круглосуточно, <br> ежедневно</div>
+						</div>
+						<div class="clinick_info_phone">
+							<div class="info_title">Телефон</div>
+							<div class="info_content">+7 (495) 415-12-04 <br> +7 (495) 280-55-34</div>
+						</div>
+						<div class="clinick_info_site">
+							<div class="info_title">Сайт</div>
+							<div class="info_content"> <a href="#"> medsi.ru/clinics/uspen...</a></div>
+						</div>
+					</div>
+					<div class="clinick_about">Помощь на дому   ·   Стоматологическое обслуживание   ·   Скорая медицинская помощь   ·   Плановая и экстренная госпитализация</div>
+					</div>
+				</div>
+				<div class="pagination">
+					<label for="N1" class="pagination_elem" >
+						<input type="radio" name="pag" id="N1" checked="checked">
+						<div>1</div>
+					</label>
+					<label for="N2" class="pagination_elem" >
+						<input type="radio" name="pag" id="N2">
+						<div>2</div>
+					</label>
+					<label for="N3" class="pagination_elem" >
+						<input type="radio" name="pag" id="N3">
+						<div>3</div>
+					</label>
+					<label for="N" class="pagination_elem" >
+						<input type="radio" name="pag" id="N">
+						<div>...</div>
+					</label>
+					<label for="N6" class="pagination_elem" >
+						<input type="radio" name="pag" id="N6">
+						<div>6</div>
+					</label>
+				</div>
+			</div>
+			<div class="list_right">2</div>
+		</div>
 	</div>
 	<div class="grey_line"></div>
 	<footer>
